--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -23,3 +23,16 @@
       ]
       state: latest
       update_cache: yes
+
+  - name: Ensure PHP fpm cgi.fix_pathinfo=0
+    lineinfile: dest=/etc/php/7.3/fpm/php.ini regexp='^(.*)cgi.fix_pathinfo=' line=cgi.fix_pathinfo=0
+    notify:
+      - restart php7.3-fpm
+      - restart nginx
+
+  handlers:
+    - name: restart php7.3-fpm
+      service: name=php7.3-fpm state=restarted
+
+    - name: restart nginx
+      service: name=nginx state=restarted
