--- a/ansible/nginx.conf
+++ b/ansible/nginx.conf
@@ -5,7 +5,7 @@ server {
     root /var/www/test-ansible;
     index index.php index.html index.htm;
 
-    server_name test-ansible.com;
+    server_name localhost;
 
     location / {
         try_files $uri $uri/ =404;
@@ -20,7 +20,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php7.3-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
